<resources>

    <!-- main -->
    <string name="main__navdrawer__open">Open navigation drawer</string>
    <string name="main__navdrawer__close">Close navigation drawer</string>

    <string name="main__save_meme">Save Meme</string>
    <string name="main__share_meme">Share Meme</string>
    <string name="main__create_meme">Create Meme</string>
    <string name="main__delete_meme">Delete meme</string>

    <string name="main__memecat__rage" translatable="false">Rage</string>
    <string name="main__memecat__goundamani">Goundamani</string>
    <string name="main__memecat__senthil">Senthil</string>
    <string name="main__memecat__vadivel">Vadivel</string>
    <string name="main__memecat__santhanam">Santhanam</string>
    <string name="main__memecat__soori">Soori</string>
    <string name="main__memecat__general">General</string>

    <string name="main__mode__saved">Saved</string>
    <string name="main__mode__favs">Favorites</string>
    <string name="main__mode__create">Create New Meme</string>

    <string name="main__get_picture_from_gallery">Get picture from Gallery</string>
    <string name="main__get_picture_from_camera">Get picture from Camera</string>
    <string name="main__error_camera_cannot_start">Could not start Camera.</string>
    <string name="main__error_no_picture_selected">No picture was selected.</string>
    <string name="main__share_meme_prompt">Share your Meme via…</string>

    <string name="main__donate_bitcoin">Donate Bitcoin</string>
    <string name="main__recommend_app">Recommend</string>
    <string name="main__changelog">Changelog</string>
    <string name="main__exit">Exit</string>
    <string name="main__yes">yes</string>

    <!-- Creator -->
    <string name="creator__press_back_again_to_exit">Press back again to stop editing this meme. Meme will be lost if it is not already saved.</string>
    <string name="creator__saved_successfully_message">This meme was successfully stored on your device.Do you want to quit editing this meme now?</string>
    <string name="creator__text_size">Text Size</string>
    <string name="creator__text_color">Text Color</string>
    <string name="creator__border_color">Border Color</string>
    <string name="creator__saved_successfully">Successfully saved!</string>
    <string name="creator__hint_top_caption">Top caption</string>
    <string name="creator__hint_bottom_caption">Bottom caption</string>
    <string name="creator__font">Font</string>
    <string name="creator__no_keep_editing">No, keep editing</string>

    <!-- Settings -->
    <string name="settings__settings">Settings</string>
    <string name="settings__all_caps">All caps</string>
    <string name="settings__caps_off">Caps off</string>
    <string name="settings__rotate">Rotate</string>
    <string name="settings__pref_render_quality_title">Render-Quality</string>
    <string name="settings__cleanup_thumbnails">Clear thumbnails</string>
    <string name="settings__pref_columns_portrait">Columns portrait</string>
    <string name="settings__pref_columns_landscape">Columns landscape</string>

    <!-- Info -->
    <string name="info__info">Info</string>
    <string name="info__developed_by">Developed by</string>
    <string name="info__additionalContact">More informations</string>
    <string name="info__licenses">Licenses</string>
    <string name="info__show_licenses">Show licenses</string>
    <string name="maintainers" translatable="false">Maintainer</string>
    <string name="contributors">Contributors</string>
    <string name="more_information">More information</string>
    <string name="info__show_gplv3_license">Show GNU GPLv3 license</string>
    <string name="info__show_third_party_licenses">Show 3rd party licenses</string>
    <string name="top_bottom_border">Top/Bottom Border</string>
    <string name="copyright_short" >copyright Omvin 2017\n\nCopyright © 2016-2017
    \nMemeTastic contributors</string>
</resources>
